# herdmates

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  HANDOFF.md  README.md  findings.md  herdr-plugin.toml  progress.md  task_plan.md
.github/workflows/: claude-code-review.yml  claude-issue-triage.yml
.scratch/board-prototype/: PROTOTYPE-board.py
docs/: focus-file.md  herdr-api-schema.snapshot.json  marketplace-notes.md  marketplace-survey-2026-07-14.json  sidebar-rows.toml  spec.md
docs/adr/: 0001-herdr-plugin-not-limux-buildout.md  0002-god-agent-seat-and-report-path.md  0003-topology-flag-star-default.md  0004-worktree-isolation-and-setup-command.md  0005-rust-standalone-repo-copy-not-depend.md  0006-data-driven-launcher-table.md  0007-v1-cut-thin-runboard.md  0008-msg-verb-and-outbox-delivery.md  0010-upstream-source-evidence-hierarchy.md  0011-direct-socket-backend.md
docs/agents/: domain.md  issue-tracker.md  research.md
docs/handoffs/: 2026-07-16-native-teammode-migration.md  2026-07-16-north-star-research-handoff.md
docs/learnings/: 100-hook-companion-2026-07-17.md  (+7 more)
examples/: agents.toml  herdr-team.toml
src/: adopt.rs  agents_md.rs  attention.rs  board.rs  focus_pane.rs  focusfile.rs  gather.rs  god_cli.rs  herdr.rs  hook.rs  idmap.rs  inbox_write.rs  jump.rs  launcher.rs  lib.rs  main.rs  msg.rs  pane_board.rs  paths.rs  pump.rs  reconcile.rs  recorder.rs  run.rs  signal_engine.rs  socket.rs  socket_backend.rs  spawn.rs  spec.rs  status_kill.rs  team_hook.rs  teamfiles.rs  teammux.rs  teammux_launch.rs  tmuxargs.rs  tokens.rs  types.rs
(+17 files in other folders)
